Add encrypted outbox and automatic network recovery